# nickel-bootstrap

./: .gitignore  Cargo.toml  LICENSE  README.md
public/: helloworld.txt
public/styles/: style.css
src/: main.rs
templates/: all_for_one.mustache  footer.mustache  header.mustache  index.mustache  navbar.mustache
