[package]

name = "nickel-bootstrap"
version = "0.0.1"
authors = ["ninjabear"]

[dependencies.nickel]

git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies.nickel_macros]

git = "https://github.com/nickel-org/nickel.rs.git"
path = "nickel_macros"

[dependencies.rust-mustache]
git = "https://github.com/nickel-org/rust-mustache.git"

[dependencies]
rustc-serialize = "*"
